--- a/part1_brfss.Rmd
+++ b/part1_brfss.Rmd
@@ -216,7 +216,10 @@ change_df = clean_brfss %>%
     subtitle = "Comparing 2020 to 2017",
     x = "State",
     y = "Decrease in Smoking Proportion"
-  )
+  ) +
+  viridis::scale_color_viridis() + 
+  theme(axis.text.x = element_text(size = 5.5))
+
 
 ggplotly(change_df)
 ```
