--- a/quit_smoke.Rmd
+++ b/quit_smoke.Rmd
@@ -221,7 +221,7 @@ Legislation on Tobacco includes three categories:
 
 Combustible Tobacco covers a majority number of smokers in the country and among five sub-groups in Combustible Tobacco, cigarette plays dominate role (more than 95%), so we mainly focus the cigarette tax among regions in the U.S. 
 
-Here is the amount of tax ($ per pack) for 58 regions in the US (50 states and 8 territories that belongs to the U.S.). From the plot, American Samoa (AS) has the highest cigarette tax, with 6 dollars per pack, followed by Puerto Rico (PR), Palau (PW), and District Colombia (DC). These four regions are all outside of 50 states. Among 50 states in the country, New York (NY) has the highest tax, with 4.35 dollars per pack. 
+Here is the amount of tax ($ per pack) for 58 regions in the US (50 states and 8 territories that belongs to the U.S.). From the plot, American Samoa (AS) has the highest cigarette tax, with 6 dollars per pack, followed by Puerto Rico (PR), Palau (PW), and District Colombia (DC). According to our previous findings, these four regions has a higher decrease of people who smoke and DC has the highest decrease. Among 50 states in the country, New York (NY) has the highest tax, with 4.35 dollars per pack. 
 
 As for the states with low cigarette tax, 35 regions have cigarette tax lower than 2 dollars and 14 regions lower than 1 dollars. Ohio and Texas have the largest increase in smokers from 2017 to 2020, both of which have cigarette lower than 2 dollars.
 
