--- a/part_1.Rmd
+++ b/part_1.Rmd
@@ -1,6 +1,11 @@
 ---
 title: "Overall Smoking trend by NHIS"
-output: html_document
+output: 
+  html_document:
+    toc: true
+    toc_float: true
+    code_folding: hide
+    theme: sandstone
 ---
 
 ```{r setup, include=FALSE}
@@ -223,7 +228,7 @@ In the past 4 years, it can be seen that the total sum of male smoker is higher 
 ```{r,echo = FALSE}
 
 #smoker's age proportion 
-plot2 = bind_rows(a1,b1,c1,d1) %>% 
+bind_rows(a1,b1,c1,d1) %>% 
   count(year, agegroup) %>% 
   drop_na() %>% 
   ggplot(aes(fill=agegroup, y=n, x=year))  + 
@@ -231,7 +236,7 @@ plot2 = bind_rows(a1,b1,c1,d1) %>%
     scale_fill_viridis(discrete = T)+
     labs(title = "The Distribution of smokers by age group over the 4 years",y = "Smoker sum", caption = "Data from National Health Survey") 
 
-ggplotly(plot2)
+#ggplotly(plot2)
 ```
 !!Interesting fact: Among all the smokers, most of the smokers are aged 56-65! 
 The age group 18-25 has the least smokers, whereas age group 56-65 has the most smokers.
