--- a/quite_smoke.Rmd
+++ b/quite_smoke.Rmd
@@ -1,12 +1,13 @@
 ---
-title: "Let's quit smoking!"
+title: "Let's Quit Smoking!"
 output: html_document
 ---
 
-<img src="photo.jpeg" style="width:55%">
+<center><img src="photo.jpeg" style="width:50%"></center>
+<center><img src="smoke.jpeg" style="width:50%"></center>
 
 
-# Here are some suggestion for you to quite smoking!
+### Here are some suggestion for you to quite smoking!
 YOU CAN:
 
 
@@ -16,6 +17,3 @@ YOU CAN:
 
 3. Use a mobile app like [quitSTART](https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitstart-app/index.html).
 More suggestion can be found in [Centers for Disease Control and Prevention (CDC)](https://www.cdc.gov/tobacco/quit_smoking/how_to_quit/index.htm)
-
-## Quit Smoking!
-<img src="smoke.jpeg" style="width:25%">
