--- a/part_1.Rmd
+++ b/part_1.Rmd
@@ -338,5 +338,6 @@ In 2017, there is a comparatively low smoking proportion in both female and male
 
 
 
-**Generally**, the smoker's proportion among Asians, especially female,is the least. 
+**Generally**, the smoking proportion of  Asians, especially females is the least among age group. 
+
 
